# SmartFileOrganizer

./: .gitignore  README.md  main.py  organize.py  project_explanation.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
configs/: categories.yaml  llm_config.yaml  rules.yaml  settings.yaml
docs/: IMPLEMENTATION_PLAN.md  PROJECT_REVIEW_AND_RECOMMENDATIONS.md  index.md
docs/_archive/: LOCAL_QUICK_REFERENCE.md  README_LOCAL.md  local_rules.md  plan_architecture_local.md
docs/archive/: README.md
docs/developer/: ARCHITECTURE.md  CONTRIBUTING.md
docs/getting-started/: INSTALLATION.md  QUICK_START.md
docs/reference/: AI_BACKENDS.md  CATEGORIES.md  RULES_CONFIG.md
docs/roadmap/: ROADMAP.md
docs/user-guide/: CLI_USAGE.md  GUI_USAGE.md
packaging/: ai_document_organizer.spec
src/: ai_analyzer.py  file_analyzer.py  file_organizer.py  gui.py  ollama_analyzer.py  openai_analyzer.py  settings_manager.py
src/organizer/: __init__.py  cli.py  executor.py  extractor.py  gpu_detector.py  llm.py  models.py  planner.py  rules.py  scanner.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: test_cli.py  test_executor.py  test_extractor.py  test_llm.py  test_models.py  test_planner.py  test_rules.py  test_scanner.py
